--- a/index.html
+++ b/index.html
@@ -73,6 +73,43 @@
 <h1>Pokemon</h1>
 <div class="container"></div>
 </body>
+-------------------------------------------------------------------------------------
+-->
+  <!-- 08.EXERCISE1
+<body>
+    <h1>Click the buttons</h1>
+
+    <button>Hello</button>
+    <button>Goodbye</button>
+</body>
+  -->
+  <!-- 08. EXERCISE 2
+<body>
+    <h1>Accordion</h1>
+
+    <div>
+      <button>Open tab</button>
+      <p class="hidden">This is text one</p>
+    </div>
+    <div>
+      <button>Open tab</button>
+      <p class="hidden">This is text two</p>
+    </div>
+    <div>
+      <button>Open tab</button>
+      <p class="hidden">This is text three</p>
+    </div>
+    <div>
+      <button>Open tab</button>
+      <p class="hidden">This is text four</p>
+    </div>
+</body>
+    -->
+  <!-- 08. EXERCISE 3 
+<body>
+    <h1>Placeholder</h1>
+    <button>Generate color</button>
+</body>
 -->
   <script src="app.js"></script>
 </html>
